Resolves: tdf#163614 empty compares greater-than for LOOKUP()

Change-Id: I529a83f18a0660c97bd1c9368418f1751b1db2aa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185932
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit b16dd0fb306944a02e5d73d4a2bbc68cf80b0b8f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185933
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>